[package]
name = "tfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = "4.5.35"
dashmap = "6.1.0"
env_logger = "0.11.8"
fuser = "0.15.1"
futures-core = "0.3.31"
hostname = "0.4.0"
ibverbs = { git = "https://github.com/2022tgoel/rust-ibverbs" } 
ibverbs-sys = { git = "https://github.com/2022tgoel/rust-ibverbs" }
libc = "0.2.171"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
tokio-zookeeper = "0.4.0"
zeromq = "0.4.1"

[lib]
name = "tfs"
path = "src/lib.rs"

[[bin]]
name = "rdma_client"
path = "bin/rdma_test/client.rs"

[[bin]]
name = "rdma_server"
path = "bin/rdma_test/server.rs"

[[bin]]
name = "chunkserver"
path = "bin/chunkserver_test/server.rs"

[[bin]]
name = "client"
path = "bin/chunkserver_test/client.rs"

[[bin]]
name = "mount"
path = "bin/client/fuse.rs"
