[package]
name = "tfs"
version = "0.1.0"
edition = "2024"

[features]
test-config = []

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
bb8 = "0.9.0"
bytes = "1.10.1"
clap = "4.5.35"
dashmap = "6.1.0"
env_logger = "0.11.8"
fuser = "0.15.1"
futures = "0.3.31"
futures-core = "0.3.31"
hostname = "0.4.0"
ibverbs = { git = "https://github.com/2022tgoel/rust-ibverbs" } 
ibverbs-sys = { git = "https://github.com/2022tgoel/rust-ibverbs" }
libc = "0.2.171"
log = "0.4.27"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
serial_test = "3.2.0"
tokio = "1.44.1"
tokio-zookeeper = "0.4.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-chrome = "0.7.2"
tracing-flame = "0.2.0"
tracing-log = "0.2.0"
tracing-perfetto = "0.1.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
turmoil = "0.6.6"

[lib]
name = "tfs"
path = "src/lib.rs"

[[bin]]
name = "chunkserver"
path = "bin/chunkserver_test/server.rs"

[[bin]]
name = "client"
path = "bin/chunkserver_test/client.rs"

[[bin]]
name = "perf_client"
path = "bin/perf_test/client.rs"

[[bin]]
name = "mount"
path = "bin/client/fuse.rs"

[[bin]]
name = "perfetto"
path = "bin/perfetto_test.rs"

[[bin]]
name = "tcp_server"
path = "bin/perf_test/tcp_server.rs"

[[bin]]
name = "tcp_client"
path = "bin/perf_test/tcp_client.rs"